# adaptive_extractor

./: .env.example  .gitignore  README.md  constraints.txt  environment.yml  pyproject.toml
.github/workflows/: tests.yml
config/: core.yaml  default.yaml  default_fast.yaml  optimization.yaml  student_gptoss.yaml
config/initial_instructions/: nanozymes_pilot.txt
config/systems/: dev.yaml  example.yaml  pilot.yaml
config/tasks/: nanozymes.yaml  nanozymes_pilot.yaml
data/ground_truth/: nanozymes.csv
data/parsed/: 03067319.2019.1599875.md  C3NR06896J.md  C4CC01703J.md  C6RA23773H.md  C7NJ03880A.md  C8NJ00097B.md  J.SNB.2017.06.096.md  J.SNB.2019.126876.md  S1320501710821.md  acsami.0c17579.md  acsnano.9b04366.md  acssuschemeng.9b02459.md  adhm.201500173.md  am406033q.md  ange.201904751.md  ange.202115939.md  anie.200805279.md  anie.201105121.md  c2nr31716h.md  c6ra00963h.md  chem.200802158.md  cm8031863.md  d1ra03456a.md  j.biomaterials.2010.11.004.md  j.colsurfa.2021.126985.md  j.jallcom.2016.04.269.md  j.jcis.2015.08.032.md  j.jtice.2017.12.011.md  j.microc.2023.108562.md  j.talanta.2015.03.050.md  s41664019001004.md  thno.19257.md
data/parsed/train/: acsami.0c07886.md  c8tb01948g.md  c9tb00989b.md  j.jcis.2021.06.170.md  s00604-017-2198-z.md
data/parsed/train/try_again/: j.snb.2012.07.070.md  jnn.2018.13977.md
data/parsed/val/: C5CC00040H.md  J.MATERRESBULL.2015.03.018.md  J.SNB.2016.08.094.md  anie.201105121.md  c4tb00968a.md  s00604-015-1506-8.md
data/splits/: nanozymes_pilot.json
docs/: README.md  adding_tasks.md  api_usage.md  architecture.md  cli_reference.md  configuration.md  data_artifacts.md  dspy_mipro_threshold_patch.md  dspy_miprov2.md  mlflow_integration.md  optimization_module.md  troubleshooting.md
scripts/: extract.py  optimize.py  parse.py  patch_dspy_mipro_zero_bootstrap.py  slaunch_optimize_pilot.sh
src/ae/core/storage/: documents.py
src/ae/optimization/: cli.py  dataset.py
src/ae/optimization/contrastive/: __init__.py  aggregator.py  analyzer.py  models.py  review.py
src/aee/: __init__.py
src/aee/application/services/: __init__.py  agent_manager.py  data_validator.py  dataset_builder.py  experiment_tracker.py
src/aee/application/use_cases/: __init__.py  optimize_agent.py  parse_documents.py  predict_batch.py
src/aee/domain/: __init__.py
src/aee/domain/entities/: __init__.py
src/aee/domain/evaluation/: __init__.py  matcher.py  metrics.py  power_analysis.py
src/aee/domain/tasks/: __init__.py  config.py  dynamic_models.py  loader.py  registry.py  signature.py
src/aee/infrastructure/: __init__.py
src/aee/infrastructure/agents/: __init__.py  extractor.py
src/aee/infrastructure/cache/: __init__.py
src/aee/infrastructure/config/: __init__.py  environments.py  logging.py  settings.py
src/aee/infrastructure/llm/: __init__.py  circuit_breaker.py  history_logger.py  provider.py
src/aee/infrastructure/parsers/: __init__.py  marker_config.py  parsers.py  visual_parser.py
src/aee/infrastructure/storage/: __init__.py  agents.py  agents_fn.py  extractions.py  ground_truth.py  ground_truth_fn.py  migrations.py  splits.py
src/aee/interface/cli/: __init__.py  extract.py  optimize.py  parse.py
tests/: conftest.py
tests/data/configs/: llm_config_template.yaml  minimal_config.yaml  nanozymes_test_config.yaml
tests/infrastructure/llm/: test_history_logger.py
tests/integration/: test_extract_flow.py  test_gemini_parser_integration.py  test_generate_manual_flow.py  test_marker_parser_integration.py  test_optimize_flow.py  test_task_plugins.py
tests/unit/application/: test_agent_manager.py  test_dataset_builder.py  test_experiment_tracker.py
tests/unit/domain/: test_dynamic_models_validation.py  test_matcher.py  test_task_config_new.py  test_task_loader.py
tests/unit/infrastructure/: test_circuit_breaker.py  test_gemini_parser.py  test_marker_config.py  test_marker_parser.py  test_provider.py  test_settings.py  test_settings_hf_token.py  test_settings_validation.py  test_storage.py  test_storage_fn.py  test_transformers_provider.py  test_visual_parser.py
tests/unit/scripts/: test_extract.py  test_optimize.py
