[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoevoextractor"
version = "0.4.0"
description = "Evolutionary self-optimizing system for scientific data extraction"
requires-python = ">=3.12"
dependencies = [
    # LLM Framework
    "dspy-ai>=2.4.4",

    # Validation and configuration
    "pydantic>=2.7.1",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",

    # Data processing and scientific computing
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",

    # HTTP client
    "requests>=2.28.0",

    # PDF parsing
    "marker-pdf>=1.0.0",
    "pypdf>=3.0.0",
    "onnxruntime-gpu>=1.15.0",

    # Google Gemini API
    "google-genai>=1.0.0",

    # ML and transformers
    "transformers>=4.40.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "scikit-learn>=1.3.0",
    "umap-learn>=0.5.0",

    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",

    # Experiment tracking and UI
    "mlflow>=2.10.0",
    "streamlit>=1.28.0",

    # Statistical modeling (for power analysis)
    "statsmodels>=0.14.0",

    # Utilities
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
mypy_path = "src"

# Ignore missing imports for third-party libraries without stubs
[[tool.mypy.overrides]]
module = [
    "dspy.*",
    "pandas.*",
    "scipy.*",
    "sklearn.*",
    "umap.*",
    "matplotlib.*",
    "seaborn.*",
    "marker.*",
    "transformers.*",
    "sentence_transformers.*",
    "mlflow.*",
    "streamlit.*",
    "yaml",
    "dotenv",
    "tabulate",
    "google.genai.*",
    "requests",
    "statsmodels.*",
]
ignore_missing_imports = true
