[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoevoextractor"
version = "0.4.0"
description = "Evolutionary self-optimizing system for scientific data extraction"
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

# NOTE: PyTorch (torch) is NOT listed in dependencies.
# Install it separately according to your environment:
#   CPU:         pip install torch --index-url https://download.pytorch.org/whl/cpu
#   GPU (cu124): pip install torch --index-url https://download.pytorch.org/whl/cu124
#   Conda:       conda install pytorch pytorch-cuda=12.4 -c pytorch -c nvidia
# See environment.yml for the recommended setup.

dependencies = [
    # === Core LLM framework ===
    # dspy-ai is a legacy meta-package that only installs dspy; use dspy directly
    "dspy>=3.1.0",

    # === Configuration and validation ===
    "pydantic>=2.7.1",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",

    # === Data processing and statistics ===
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
    "tabulate>=0.9.0",

    # === HTTP client ===
    "requests>=2.28.0",

    # === PDF handling (lightweight, always needed for file I/O) ===
    "pypdf>=3.0.0",

    # === LLM: local inference (transformers provider) ===
    # Lazy-imported when provider: "transformers" is configured.
    # Requires torch to be installed separately (see note above).
    "transformers>=4.40.0",
    "accelerate>=0.27.0",

    # === LLM: Gemini API (primary PDF parser) ===
    # Lazy-imported when parser: "gemini" is configured
    "google-genai>=1.0.0",

    # === Optimized attention kernels for Qwen3.5+ ===
    # Eliminates "fast path not available" warning; auto-detected by transformers.
    # causal-conv1d is implemented in Triton inside flash-linear-attention.
    # Requires torch (installed separately).
    "flash-linear-attention>=0.4.0",

    # === Experiment tracking ===
    # Lazy-imported with graceful degradation if not available
    "mlflow>=2.10.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "responses>=0.23.0",

    # Linting and type checking
    # ruff is the primary linter; flake8 runs in CI for critical errors only
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]
quant = [
    # Required for quantization: quantization: "4bit" / "8bit" in YAML config
    # Requires torch to be installed separately first
    "bitsandbytes>=0.42.0",
]
marker = [
    # Alternative PDF parser (local, GPU-based).
    # Requires transformers<5.0 — incompatible with transformers 5.x.
    # If using this group, install in a separate environment with:
    #   pip install "transformers>=4.40.0,<5.0.0" "autoevoextractor[marker]"
    # Requires torch (installed separately).
    "marker-pdf>=1.0.0",
    "onnxruntime-gpu>=1.15.0",
]
notebook = [
    # Jupyter tools for research notebooks (not part of the core package).
    # Used in .ipynb files outside src/.
    "jupyterlab>=4.0.0",
    "notebook>=7.0.0",
    "ipykernel>=6.25.0",
    "ipywidgets>=8.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.scripts]
aee-parse = "aee.interface.cli.parse:main"
aee-extract = "aee.interface.cli.extract:main"
aee-optimize = "aee.interface.cli.optimize:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 127

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
known-first-party = ["aee"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
mypy_path = "src"

# Ignore missing imports for third-party libraries without stubs
[[tool.mypy.overrides]]
module = [
    "dspy.*",
    "pandas.*",
    "scipy.*",
    "sklearn.*",
    "umap.*",
    "matplotlib.*",
    "seaborn.*",
    "marker.*",
    "transformers.*",
    "sentence_transformers.*",
    "mlflow.*",
    "streamlit.*",
    "yaml",
    "dotenv",
    "tabulate",
    "google.genai.*",
    "requests",
    "statsmodels.*",
    "flash_linear_attention.*",
    "fla.*",
    "torch",
    "accelerate",
    "bitsandbytes",
    "pypdf",
]
ignore_missing_imports = true
